[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.3", features = ["macros"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tower-http = {version = "0.5.0", features = ["fs"]}
cargo-watch = "8.5.2"
tower-cookies = "0.10.0"

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.8"
tower-cookies = "0.10.0"
